--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=7.3",
         "laravel/framework": "^7.0",
         "tymon/jwt-auth": "^1.0",
-        "geekcom/validator-docs": "^3.4"
+        "geekcom/validator-docs": "^3.4",
+        "ext-json": "*"
     },
     "minimum-stability": "dev",
     "autoload": {
