--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^7.0",
         "tymon/jwt-auth": "^1.0",
         "geekcom/validator-docs": "^3.4",
-        "ext-json": "*"
+        "agp/base-utils": "^1.0",
+        "agp/log": "^1.0"
     },
     "minimum-stability": "dev",
     "autoload": {
