--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=7.3",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^7.0|^8.0",
         "tymon/jwt-auth": "^1.0",
         "geekcom/validator-docs": "^3.4",
         "agp/base-utils": "^1.0",
